--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html, body{
            max-width:800px;
            border:1px solid gainsboro;
            text-align: center;
+           box-shadow:2px 4px 5px red;
 }
 
 .ratings-container{
