--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ html, body{
 }
 
 .page-container{
-             display:grid;
-             grid-template-columns: 1fr 1fr;
+             display:flex;
+
 }
 
 
