--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ button{
              display:flex;
              justify-content:center;
              margin-top:45px;
+             gap:5px;
 
 }
 #time{
