--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html, body{
            gap:40px;
            justify-content:center;
            width:800px;
-           margin:auto;
+           margin:60px auto;
 }
 button{
           border:none;
@@ -103,7 +103,11 @@ header{
 }
 
 .heading{
-       font-size:45px;
+       font-size:19px;
+       background:#FFFFFF;
+       padding:11px;
+       width:600px;
+       margin:auto;
        
        
 }
