--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ header{
        padding:11px;
        width:600px;
        margin:auto;
+       box-shadow:2px 3px 4px black;
        
        
 }
