--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ header{
        width:600px;
        margin:auto;
        box-shadow:2px 3px 4px black;
+       text-align:center;
        
        
 }
