--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ button{
           padding:12px;
           font-weight:bold;
           background:rgb(345, 233, 200);
+          font-weight: 900;
 }
 
 
