--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ header{
        background:#FFFFFF;
        padding:11px;
        width:600px;
-       margin:auto;
+       margin:10px auto;
        box-shadow:2px 3px 4px black;
        text-align:center;
        
