--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@ a:hover{
 
 header{
        display: flex;
-        padding:5px;
+        justify-content: center;
+       padding:5px;
         top:0;
         position:sticky;
 }
