--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ a:hover{
 header{
        display: flex;
         justify-content: center;
+        align-items: center;
        padding:5px;
         top:0;
         position:sticky;
