--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ a:hover{
 
 header{
        display: flex;
-        justify-content: center;
+        justify-content:space-around;
         align-items: center;
        padding:5px;
         top:0;
