--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ a:hover{
 }
 header{
        display: flex;
-        justify-content:space-around;
+        justify-content:center;
         align-items: center;
        padding:5px;
         top:0;
