--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ button{
         
         text-transform:uppercase; 
         font-weight:900;
-        text-align:center;    
+        text-align:center;   
+        flex=1; 
 }
 
 a{
