--- a/style.css
+++ b/style.css
@@ -67,7 +67,13 @@ button{
     font-weight:900;
     color:#FFFFFF;
 }
-
+.mgse{
+      font-size:34px;
+      background:pink;
+      padding:11px;
+      text-align:center;
+      font-weight:900;
+}
 
 .top-title{
         font-size:44px;
