--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ button{
     font-weight:900;
     color:#FFFFFF;
 }
-.mgse{
+.mgse p{
       font-size:34px;
       background:pink;
       padding:11px;
