--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ button{
       font-size:19px;
       font-weight:100px;
       border-left:2px solid black;
+      padding:12px;
 }
 .page-container{
              display:flex;
