--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ button{
       font-weight:100px;
       border-left:2px solid black;
       padding:10px;
-      color:seagreen;
+      color:white;
+      background:black;
 }
 .page-container{
              display:flex;
