--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ header{
         background-color: pink;
 }
 .logo{
-       margin-right:50px;
+       margin-left:50px;
 }
 .heading{
        font-size:19px;
