--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ button{
       padding:10px;
       color:white;
       background:black;
+      cursor: pointer;
 }
 .page-container{
              display:flex;
