--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ header{
     color:#FFFFFF;
     background-color: black;
     padding:12px;
+    margin-top:20px;
 }
 .chef{
         display:flex;
