--- a/style.css
+++ b/style.css
@@ -108,10 +108,8 @@ a:hover{
 
 .bold{
        font-weight:900;
-       font-size:3
-       2px;
+       font-size:32px;
        font-family: 'Satisfy', cursive;
-       
        
 }
 .name{
