--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ header{
      padding:18px;
      font-size:23px;
      margin: 0 auto;
-     top:0;""
+     top:0;
      width:300px;
 }
 .btn:hover{
@@ -182,4 +182,7 @@ img{
 footer{
          background:pink;
          text-align:center;
+         font-size:27px;
+         font-weight:900;
+         padding:16px;
 }
