--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html, body{
            justify-content:center;/*Center the flex container*/
            width:800px;
            margin:60px auto;
+           
 }
 button{
           border:none;/*Remove button border*/
@@ -67,7 +68,7 @@ button{
              display:flex;
              justify-content:center;
              margin-top:17px;
-             
+            vertical-align: baseline;
              width: 100%;
 
 }
