--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ html, body{
 .slide{
     width|:100%;
 }
-
+.images{
+       height:100vh;
+}
 .container{
            max-width:800px;
            border:1px solid gainsboro;
@@ -68,7 +70,7 @@ button{
              display:flex;
              justify-content:center;
              margin-top:17px;
-            vertical-align: baseline;
+            
              width: 100%;
 
 }
