--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ header{
 }
 .heading{
        font-size:19px;
-       background:#FFFFFF;
+       background:beige;
        padding:11px;
        width:600px;
        margin:10px auto;
