--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ button{
           font-weight:bold;
           background:rgb(345, 233, 200);
           font-weight: 900;
+          width:200px;
 }
 
 
