--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ button{
              display:flex;
              justify-content:center;
              margin-top:17px;
-            
+            height:600px;
              width: 100%;
 
 }
