--- a/style.css
+++ b/style.css
@@ -41,9 +41,20 @@ html, body{
     position:absolute;
     top:50px;
     left:50px;
-    color:red;
+    color:white;
+    background:seagreen;
+    padding:11px;
+    font-weight:900;
 }
-
+.right{
+    position:relative;
+    right:50px;
+    top:50px;
+    color:white;
+    background:seagreen;
+    padding:11px;
+    font-weight:900;
+}
 
 button{
           border:none;/*Remove button border*/
