--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ html, body{
     font-weight:900;
 }
 .right{
-    position:relative;
+    position:absolute;
     right:50px;
     top:50px;
     color:white;
