--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ html, body{
 }
 .left{
     position:absolute;
-    top:50px;
-    left:50px;
+    top:50%;
+    bottom:50%;
     color:white;
     background:seagreen;
     padding:11px;
@@ -49,7 +49,8 @@ html, body{
 .right{
     position:absolute;
     right:50px;
-    top:50px;
+    top:50%;
+    bottom:50%
     color:white;
     background:seagreen;
     padding:11px;
