--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ html, body{
 }
 .left{
     position:absolute;
-    top:50%;
-    bottom:50%;
+    top:80%;
+   
     color:white;
     background:seagreen;
     padding:11px;
@@ -48,9 +48,9 @@ html, body{
 }
 .right{
     position:absolute;
-    right:50px;
-    top:50%;
-    bottom:50%
+    
+    top:80px;
+    
     color:white;
     background:seagreen;
     padding:11px;
