--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html, body{
 .left{
     position:absolute;
     top:80%;
-   
+    left:0px;
     color:white;
     background:seagreen;
     padding:11px;
@@ -48,7 +48,7 @@ html, body{
 }
 .right{
     position:absolute;
-    
+    right:0px
     top:80px;
     
     color:white;
