--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ html, body{
 .right{
     position:absolute;
     right:0px;
-    bottom:80px;
+    top:590px;
     
     color:white;
     background:seagreen;
