--- a/style.css
+++ b/style.css
@@ -39,18 +39,21 @@ html, body{
 }
 .left{
     position:absolute;
-    bottom:80px;
+    top:590px;
     left:0px;
+    width:100px;
     color:white;
     background:seagreen;
     padding:11px;
     font-weight:900;
+    text-align:center;
 }
 .right{
     position:absolute;
     right:0px;
     top:590px;
-    
+    width:100px;
+    text-align:center;
     color:white;
     background:seagreen;
     padding:11px;
