--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ html, body{
     left:0px;
     width:100px;
     color:white;
-    background:seagreen;
+    background:black;
     padding:11px;
     font-weight:900;
     text-align:center;
@@ -55,7 +55,7 @@ html, body{
     width:100px;
     text-align:center;
     color:white;
-    background:seagreen;
+    background:black;
     padding:11px;
     font-weight:900;
 }
