--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ html, body{
     top:590px;
     left:0px;
     width:100px;
-    color:white;
+    color:black;
     background:pink;
     padding:11px;
     font-weight:900;
@@ -54,7 +54,7 @@ html, body{
     top:590px;
     width:100px;
     text-align:center;
-    color:white;
+    color:black;
     background:pink;
     padding:11px;
     font-weight:900;
