--- a/style.css
+++ b/style.css
@@ -42,8 +42,8 @@ html, body{
     top:590px;
     left:0px;
     width:100px;
-    color:black;
-    background:pink;
+    color:white;
+    background:black;
     padding:11px;
     font-weight:900;
     text-align:center;
@@ -54,8 +54,8 @@ html, body{
     top:590px;
     width:100px;
     text-align:center;
-    color:black;
-    background:pink;
+    color:white;
+    background:black;
     padding:11px;
     font-weight:900;
 }
