--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ button{
              display:flex;
              justify-content:center;
              margin-top:17px;
-            height:auto;
+            min-height:1350px;
              width: 100%;
 
 }
