--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ a:hover{
     margin-top:30px;
     font-size:20px;
     font-weight:900;
+    text-transform:uppercase;
 }
 .bold{
        font-weight:900;
