--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body{
 }
 
 .slide{
-    width|:100%;
+    width:100%;
 }
 
 .container{
@@ -101,10 +101,6 @@ button{
             min-height:1350px;
              width: 100%;
 
-}
-#time{
-    font-weight:900;
-    color:#FFFFFF;
 }
 
 
