--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ html, body{
            
 }
 
-.slide{
-    width:100%;
+.slider{
+    width:900px;
 }
 
 .container{
@@ -36,28 +36,6 @@ html, body{
     position:relative;
     max-width:900px;
    
-}
-.left{
-    position:absolute;
-    top:700px;
-    left:0px;
-    width:100px;
-    color:white;
-    background:black;
-    padding:11px;
-    font-weight:900;
-    text-align:center;
-}
-.right{
-    position:absolute;
-    right:0px;
-    top:700px;
-    width:100px;
-    text-align:center;
-    color:white;
-    background:black;
-    padding:11px;
-    font-weight:900;
 }
 
 button{
