--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html, body{
            margin:60px auto;
            
 }
-.section{
+.slide{
     position:relative;
     max-width:900px;
    
@@ -44,6 +44,37 @@ button{
           font-weight: 900;
           width:200px;
 }
+
+
+.left{
+    position:absolute;
+    top:50%;
+    left:0px;
+    width:100px;
+    color:black;
+    background:beige;
+    padding:11px;
+    font-weight:900;
+    text-align:center;
+}
+.right{
+    position:absolute;
+    right:0px;
+    top:50%;
+    width:100px;
+    text-align:center;
+    color:black;
+    background:beige;
+    padding:11px;
+    font-weight:900;
+}
+
+
+
+
+
+
+
 
 
 .rating{
