--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ button{
     padding:11px;
     font-weight:900;
     text-align:center;
+    font-size:25px;
 }
 .right{
     position:absolute;
@@ -67,6 +68,7 @@ button{
     background:beige;
     padding:11px;
     font-weight:900;
+    font-size:25px;
 }
 
 
