--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ button{
     padding:11px;
     font-weight:900;
     text-align:center;
-    font-size:25px;
+    font-size:20px
 }
 .right{
     position:absolute;
@@ -68,7 +68,7 @@ button{
     background:beige;
     padding:11px;
     font-weight:900;
-    font-size:25px;
+    font-size:20px;
 }
 
 
