--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    box-sizing:border-box; /*Include margin and padding in width*/
+    box-sizing:border-box; /*Include margin and padding in width and height*/
 }
 
 
@@ -9,7 +9,6 @@ html, body{
             
            
 }
-
 
 
 .container{
@@ -24,7 +23,7 @@ html, body{
 .ratings-container{
            display:flex; /*Create a flex container*/
            flex-wrap:nowrap;
-           gap:40px;
+           gap:40px;/*Define space between flex items*/
            justify-content:center;/*Center the flex container*/
            width:800px;
            margin:60px auto;
@@ -45,7 +44,7 @@ button{
           width:200px;
 }
 
-
+/*Style previous button*/
 .left{
     position:absolute;
     top:50%;
@@ -58,6 +57,9 @@ button{
     text-align:center;
     font-size:20px
 }
+
+/*Style next button */
+
 .right{
     position:absolute;
     right:0px;
@@ -70,13 +72,6 @@ button{
     font-weight:900;
     font-size:20px;
 }
-
-
-
-
-
-
-
 
 
 .rating{
