--- a/style.css
+++ b/style.css
@@ -29,9 +29,12 @@ html, body{
            
 }
 .slider{
-    position:relative;
-    max-width:900px;
-   
+	
+	width:50%;
+}
+ 
+.img-box img{
+	width:70%;
 }
 
 button{
