--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html, body{
            border:1px solid gainsboro;
            text-align: center;
            box-shadow:2px 4px 5px;
-           background:pink;
+           background:#fff0f3;
            }
 
 .ratings-container{
