--- a/style.css
+++ b/style.css
@@ -9,8 +9,16 @@ html, body{
             
            
 }
-
-
+p{
+    font-size:1.6rem;
+    line-height: 1.8;
+}
+img{
+    max-width:100%;
+    width:100%;
+    height:auto;
+    display:block;
+}
 .container{
            max-width:800px;
            border:1px solid gainsboro;
@@ -69,7 +77,10 @@ button:hover {
     transform: scale(1.05);
   }
 
-
+.slide-container{
+    width:100%;
+    max-width:600px;
+}
 
 /*Style previous button*/
 .left{
@@ -139,13 +150,14 @@ button:hover {
              justify-content:center;
              margin-top:17px;
              min-height:1350px;
-             width: 100%;
+             max-width: 100%;
+             width:100%;
 
 }
 
 
 .top-title{
-        font-size:44px;
+        font-size:2.5rem;
         text-shadow:2px 3px 3px black;
         text-transform:uppercase; 
         font-weight:900;
@@ -197,15 +209,32 @@ header{
         justify-content:center;
         align-items: center;
        padding:5px;
-        top:0;
-        position:sticky;
-        background-color:#fff0f3;
+       
+        
         box-shadow: 2px 3px 4px black;
         z-index: 1;
 }
+
+
+
+
+
 .logo{
        margin-left:50px;
 }
+
+
+.emoji {
+    cursor: pointer;
+    transition: transform 0.3s ease, color 0.3s ease;
+  }
+  
+  .emoji:hover {
+    transform: scale(1.3) rotate(5deg);
+    color: #4CAF50; /* optional: change color slightly */
+  }
+
+
 .heading{
        font-size:19px;
        background:beige;
@@ -214,7 +243,7 @@ header{
        margin:10px auto;
        box-shadow:2px 3px 4px black;
        text-align:center;
-       font-weight:900;
+       font-weight:600;
        
        
 }
@@ -265,3 +294,18 @@ footer{
 }
 
 
+@media screen and (max-width:768px){
+    .page-container{
+        display:flex;
+        flex-direction: column;
+    }
+h1{
+    font-size: 2rem;
+}
+header{
+display:flex;
+flex-direction:column;
+}
+
+
+}
