--- a/style.css
+++ b/style.css
@@ -6,8 +6,127 @@
 /*Define the font family of the page*/
 html, body{
             font-family:verdana;
-            
            
+           
+}
+
+body{
+  height:100%; 
+  display:flex;
+  flex-direction:column;
+
+}
+
+.food-container{
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    max-width:100%;
+    width:100%;
+    gap:11px;
+  
+  
+}
+
+.food-container h3{
+    font-size:0.8rem;
+    font-weight:600;
+}
+
+.food-container img{
+    width:400px;
+    height:200px;
+    display:block;
+    object-fit:cover;
+}
+.food-container image{
+    height:100%;
+}
+
+.search-section{
+    margin:33px auto;
+    text-align:center;
+    max-width:700px;
+    width:100%;
+    padding:2rem;
+    position:relative;
+   }
+
+.food-box{
+    display:flex;
+    flex-direction:column;
+    min-height:350px;
+    
+}
+
+.modal{
+   font-size:0.9rem;
+   max-width:600px;
+   width:100%;
+   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+   padding:33px;
+   height:auto;
+   line-height:1.8;
+  max-height: 80vh; /* 80% of viewport height */
+  overflow-y: auto;
+ 
+  
+  
+  background: white;
+  transition:0.3s;
+
+position:fixed;
+z-index:1000;
+
+  transition: 0.3s ease;
+ margin-left:-600px;
+  border-radius: 12px;
+ 
+}
+
+
+.show-modal{
+ 
+ margin-left:0px;
+ 
+  
+}
+
+.food-box .btn{
+    margin-bottom:2rem;
+}
+.food-box-content{
+    display:flex;
+    flex-direction:column;
+    flex-grow:1;
+}
+
+
+
+   h2,h3{
+    text-transform: capitalize;
+    text-align:center;
+}
+
+
+#search-input{
+    text-align:center;
+    padding:0.5rem;
+    max-width:400px;
+    width:100%;
+    margin:auto;
+    
+}
+#search-btn{
+    padding:0.5rem;
+}
+
+main{
+    flex:1;
+    margin-bottom:2rem;
+}
+
+footer{
+    margin-top:3rem;
 }
 p{
     font-size:1.6rem;
@@ -16,15 +135,18 @@ p{
 img{
     max-width:100%;
     width:100%;
-    height:auto;
+    height:100%;
     display:block;
 }
 .container{
-           max-width:800px;
+           
            border:1px solid gainsboro;
            text-align: center;
            box-shadow:2px 4px 5px;
            background:#fff0f3;
+           height:800px;
+           max-width:700px;
+           width:100%;
            }
 
 .ratings-container{
@@ -32,19 +154,79 @@ img{
            flex-wrap:nowrap;
            gap:40px;/*Define space between flex items*/
            justify-content:center;/*Center the flex container*/
-           width:800px;
-           margin:60px auto;
+           padding:2rem;
+          
            
 }
-.slider{
-	
-	position:relative;
-    max-width:900px;
+
+.container-content{
+   
+    padding:2rem;
+    margin:1rem;
+    display:flex;
+    flex-direction:column;
+    gap:21px;
+
 }
- 
+.container-infos p{
+    font-size:1rem;
+    text-transform:capitalize;
+}
+.slider{
+	max-width:700px;
+	position:relative;
+    
+}
+.slider img{
+    width:700px;
+    height:800px;
+    object-fit:cover;
+    display:block;
+ }
+.chef img{
+    width:150px;
+    height:100px;
+    display:block;
+    object-fit:cover;
+}
+ .rating i{
+color:orange;
+font-size:2rem;
+ }
+
+/*Define Flex container*/
+.page-container{
+             display:flex;
+             justify-content:center;
+             max-width:100%;
+             width:100%;
+        
+           
+          
+
+}
+
+.ratings-container{
+  background:gainsboro;
+  border-radius:11px;
+   
+}
+
+.slider{
+   
+}
 
 
-button{
+
+.title{
+    margin-bottom:1rem;
+    display: block;
+}
+
+
+
+
+.btn{
           border:none;/*Remove button border*/
           padding:12px;
           font-weight:bold;
@@ -54,7 +236,7 @@ button{
 }
 
 
-button:hover {
+.btn:hover {
     background-color: #388e3c; /* darker green */
     transform: scale(1.05);
     transition: 0.3s ease;
@@ -87,13 +269,14 @@ button:hover {
     position:absolute;
     top:50%;
     left:0px;
-    width:150px;
+   max-width:150px;
+   width:100%;
     color:black;
     background:beige;
     padding:11px;
     font-weight:900;
     text-align:center;
-    font-size:20px;
+    font-size:17px;
     cursor:pointer;
 }
 
@@ -103,13 +286,14 @@ button:hover {
     position:absolute;
     right:0px;
     top:50%;
-    width:150px;
+    max-width:150px;
+    width:100%;
     text-align:center;
     color:black;
     background:beige;
     padding:11px;
     font-weight:900;
-    font-size:20px;
+    font-size:17px;
     cursor:pointer;
 }
 .right:hover,
@@ -144,17 +328,6 @@ button:hover {
       background:black;
       cursor: pointer;
 }
-/*Define Flex container*/
-.page-container{
-             display:flex;
-             justify-content:center;
-             margin-top:17px;
-             min-height:1350px;
-             max-width: 100%;
-             width:100%;
-
-}
-
 
 .top-title{
         font-size:2.5rem;
@@ -179,7 +352,8 @@ a:hover{
      padding:14px;
 }
 .pic img{
-    width:100%;
+    width:200px;
+    height:150px;
     outline:10px solid white;
 }
 
@@ -193,7 +367,7 @@ a:hover{
        font-weight:900;
        font-size:32px;
        font-family: 'Satisfy', cursive;
-       color:red;
+       text-transform:capitalize;
        font-style:oblique;
        
 }
@@ -209,13 +383,21 @@ header{
         justify-content:center;
         align-items: center;
        padding:5px;
-       
+       margin-bottom: 1rem;
         
         box-shadow: 2px 3px 4px black;
-        z-index: 1;
+       
 }
 
+.count.bump {
+  animation: bump 0.3s ease;
+}
 
+@keyframes bump {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.3); }
+  100% { transform: scale(1); }
+}
 
 
 
@@ -235,11 +417,12 @@ header{
   }
 
 
-.heading{
-       font-size:19px;
+.heading p {
+       font-size:0.9rem;
        background:beige;
        padding:11px;
-       width:600px;
+       max-width:600px;
+       width:100%;
        margin:10px auto;
        box-shadow:2px 3px 4px black;
        text-align:center;
@@ -257,6 +440,7 @@ header{
         display:flex;
         flex-direction: column;
         align-items: center;
+        margin-top:1.5rem;
 }
 
 .me{
@@ -268,11 +452,12 @@ header{
      border:none;
      background:seagreen;
      color:#FFFFFF;
-     padding:18px;
-     font-size:23px;
+     padding:7px;
+     font-size:0.9rem;
      margin: 0 auto;
      top:0;
-     width:300px;
+     width:200px;
+     border-radius: 11px;
 }
 .btn:hover{
         box-shadow:2px 1px 2px black;
@@ -290,7 +475,9 @@ footer{
          font-weight:900;
          padding:16px;
          text-transform: capitalize;
-         margin-top:12px;
+         margin-bottom:0;
+        
+         
 }
 
 
@@ -300,12 +487,32 @@ footer{
         flex-direction: column;
     }
 h1{
-    font-size: 2rem;
+    font-size:1rem;
 }
 header{
 display:flex;
 flex-direction:column;
 }
+.food-container{
+    grid-template-columns: 1fr;
+}
 
+.modal{
+    font-size:0.6rem;
+  
+   
+}
+
+
+}
+
+
+@media screen and (min-width:768px) and (max-width:1024px){
+.food-container{
+    grid-template-columns: repeat(2,1fr);
+}
+  .modal{
+    font-size:0.8rem;
+  }
 
 }
