--- a/style.css
+++ b/style.css
@@ -276,14 +276,14 @@ font-size:2rem;
     position:absolute;
     top:50%;
     left:0px;
-   max-width:150px;
+   max-width:100px;
    width:100%;
     color:black;
     background:beige;
-    padding:11px;
+    padding:0.5rem;
     font-weight:900;
     text-align:center;
-    font-size:17px;
+    font-size:0.8rem;
     cursor:pointer;
 }
 
@@ -293,14 +293,14 @@ font-size:2rem;
     position:absolute;
     right:0px;
     top:50%;
-    max-width:150px;
+    max-width:100px;
     width:100%;
     text-align:center;
     color:black;
     background:beige;
-    padding:11px;
+    padding:0.5rem;
     font-weight:900;
-    font-size:17px;
+    font-size:0.8rem;
     cursor:pointer;
 }
 .right:hover,
@@ -416,7 +416,14 @@ header{
 .emoji {
     cursor: pointer;
     transition: transform 0.3s ease, color 0.3s ease;
-  }
+    width:70px;
+    height:70px;
+    object-fit:contain;
+    display:inline-block;
+      
+      aspect-ratio: 1/1;
+  
+}
   
   .emoji:hover {
     transform: scale(1.3) rotate(5deg);
@@ -493,8 +500,16 @@ footer{
         display:flex;
         flex-direction: column;
     }
-h1{
+
+    .emoji{
+        width:40px;
+        height:40px;
+      
+    }
+h2{
     font-size:1rem;
+    width:80%;
+    margin:2rem auto;
 }
 header{
 display:flex;
@@ -509,8 +524,17 @@ flex-direction:column;
   
    
 }
-
-
+.top-title{
+    font-size:2rem;
+}
+.image-box img{
+    width:100%;
+    height:auto;
+}
+.title{
+    margin-bottom:1rem;
+    display:block;
+}
 }
 
 
