"update index.js"

--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ header{
      color:#FFFFFF;
      padding:7px;
      font-size:0.9rem;
-     margin: 0 auto;
+     margin: 1rem auto;
      top:0;
      width:200px;
      border-radius: 11px;
