--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body{
 }
 
 .food-container img{
-    width:400px;
+    max-width:400px;
+	width:100%;
     height:300px;
     display:block;
     object-fit:cover;
