--- a/style.css
+++ b/style.css
@@ -545,10 +545,10 @@ flex-direction:column;
 }
 
 
-@media screen and (min-width:768px) and (max-width:1024px){
+@media screen and (min-width:769px) and (max-width:1024px){
 .food-container{
 	display:grid;     
-	grid-template-columns: repeat(2,200px);
+	grid-template-columns: repeat(2,1fr);
 }
 .food-box{
 	display:grid;
