--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body{
 .food-container img{
     max-width:400px;
 	width:100%;
-    height:300px;
+    height:auto;
     display:block;
     object-fit:cover;
 }
