--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-&*{
+*{
     box-sizing:border-box; /*Include margin and padding in width and height*/
 }
 
@@ -435,6 +435,14 @@ header{
     transform: scale(1.3) rotate(5deg);
     color: #4CAF50; /* optional: change color slightly */
   }
+.count{
+	background:seagreen;
+	width:40px;
+	height:30px;
+	color:white;
+	font-weight:700;
+}
+	
 
 
 .heading p {
