--- a/style.css
+++ b/style.css
@@ -558,8 +558,8 @@ flex-direction:column;
 }
 
 
-@media screen and (min-width:769px) and (max-width:1024px){
-.food-container{
+@media screen and (min-width:768px) and (max-width:1024px){
+.food-box{
 	display:grid;     
 	grid-template-columns: repeat(2,1fr);
 }
