--- a/style.css
+++ b/style.css
@@ -559,10 +559,14 @@ flex-direction:column;
 
 
 @media screen and (min-width:768px) and (max-width:1024px){
-.food-box{
+.food-container{
 	display:grid;     
 	grid-template-columns: repeat(2,1fr);
 }
+	.food-box{
+		display:flex;
+		flex-direction:column;
+	}
 
 	.modal{
     font-size:0.8rem;
