Add food-box-content class to food-box

--- a/style.css
+++ b/style.css
@@ -563,7 +563,7 @@ flex-direction:column;
 	display:grid;     
 	grid-template-columns: repeat(2,1fr);
 }
-	.food-box{
+	.food-box-content{
 		display:flex;
 		flex-direction:column;
 	}
