--- a/style.css
+++ b/style.css
@@ -450,7 +450,8 @@ header{
 
 .heading p {
        font-size:0.9rem;
-      color:white;
+       color:white;
+	   padding:31px;
 	   font-weight:700
 }
 
