Change min-height to height for container

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ img{
            text-align: center;
            box-shadow:2px 4px 5px;
            background:#fff0f3;
-           min-height:700px;
+           height:700px;
            max-width:700px;
            width:100%;
            }
