--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ img{
            justify-content:center;/*Center the flex container*/
            padding:2rem;
 	       border:1px solid seagreen;
-	height:300px;
+	       height:300px;
           
            
 }
@@ -178,6 +178,7 @@ img{
     margin:1rem;
     display:flex;
     flex-direction:column;
+	align-items:center;
     gap:21px;
 
 }
